Rename project from "EventSpace" to "App" across files
Updated project name references in configuration, scripts, and code. This includes changes to database URLs, Docker commands, environment variables, and displayed API titles. Ensures consistency with the new project name "App".

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "docker:build": "docker build -t eventspace-frontend .",
-    "docker:run": "docker run -p 3000:3000 eventspace-frontend"
+    "docker:build": "docker build -t app-frontend .",
+    "docker:run": "docker run -p 3000:3000 app-frontend"
 
   },
   "dependencies": {
