--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 # Common settings
-PROJECT_NAME=EventSpace
+PROJECT_NAME=App
 VERSION=1.0.0
 
 # Database settings
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=eventspace
+POSTGRES_DB=App
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
