--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/eventspace
+sqlalchemy.url = postgresql://postgres:postgres@db:5432/app
 
 [loggers]
 keys = root,sqlalchemy,alembic
