Refactor and reorganize Alembic and database configuration.
Moved Alembic files into the `app/alembic` directory and updated related paths. Consolidated database configuration in `config.py`, leveraging environment variables and ensuring centralized management. Updated Docker Compose to include `.env` files, providing a more consistent environment setup.

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = alembic
+script_location = app/alembic
 sqlalchemy.url = postgresql://postgres:postgres@db:5432/app
 
 [loggers]
