--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,13 +4,14 @@ uvicorn>=0.34.0
 pydantic>=2.10.6
 pydantic-settings>=2.2.1
 python-multipart>=0.0.19
+fastapi-utils==0.8.0
 
 # Database
 sqlalchemy>=2.0.29
 alembic>=1.14.1
 psycopg2-binary>=2.9.9
 asyncpg>=0.29.0
-
+aiosqlite==0.21.0
 # Security and authentication
 python-jose>=3.4.0
 passlib>=1.7.4
@@ -30,7 +31,7 @@ httpx>=0.27.0
 tenacity>=8.2.3
 pytz>=2024.1
 pillow>=10.3.0
-
+apscheduler==3.11.0
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.23.5
@@ -42,3 +43,10 @@ black>=24.3.0
 isort>=5.13.2
 flake8>=7.0.0
 mypy>=1.8.0
+
+# Security
+python-jose==3.4.0
+bcrypt==4.2.1
+cryptography==44.0.1
+passlib==1.7.4
+freezegun~=1.5.1
