Remove legacy test files for auth, rate limiting, and users
- Deleted outdated backend test cases (`test_auth.py`, `test_rate_limiting.py`, `test_users.py`) to clean up deprecated test structure.
- These tests are now redundant with newer async test implementations and improved coverage.

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 testpaths = tests
 python_files = test_*.py
-addopts = --disable-warnings
+addopts = --disable-warnings -n auto
 markers =
     sqlite: marks tests that should run on SQLite (mocked).
     postgres: marks tests that require a real PostgreSQL database.
