--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ apscheduler==3.11.0
 pytest>=8.0.0
 pytest-asyncio>=0.23.5
 pytest-cov>=4.1.0
+pytest-xdist>=3.8.0
 requests>=2.32.0
 
 # Development tools
