--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@peculiar/webcrypto": "^1.5.0",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
