Refactor form error handling with type guards, enhance API client configuration, and update implementation plan
- Introduced `isAPIErrorArray` type guard to improve error handling in authentication forms, replacing type assertions for better runtime safety.
- Refactored error handling logic across `RegisterForm`, `LoginForm`, `PasswordResetRequestForm`, and `PasswordResetConfirmForm` for unexpected error fallbacks.
- Updated `next.config.ts` and `.eslintrc.json` to exclude generated API client files from linting and align configuration with latest project structure.
- Added comprehensive documentation on Phase 2 completion in `IMPLEMENTATION_PLAN.md`.

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,13 +1,12 @@
 {
   "extends": "next/core-web-vitals",
-  "ignorePatterns": ["src/lib/api/generated/**"],
-  "overrides": [
-    {
-      "files": ["src/lib/api/generated/**/*"],
-      "rules": {
-        "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-explicit-any": "off"
-      }
-    }
+  "ignorePatterns": [
+    "node_modules",
+    ".next",
+    "out",
+    "build",
+    "dist",
+    "coverage",
+    "src/lib/api/generated"
   ]
 }
