--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@hey-api/openapi-ts": "^0.86.11",
+    "@next/bundle-analyzer": "^16.0.1",
     "@peculiar/webcrypto": "^1.5.0",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
@@ -74,6 +75,7 @@
     "eslint-config-next": "15.2.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "lighthouse": "^12.8.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "whatwg-fetch": "^3.6.20"
