--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,12 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.552.0",
     "next": "^15.5.6",
@@ -47,6 +49,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.2",
