--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "lint:tests": "eslint tests --max-warnings=0",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
@@ -61,7 +61,6 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@hey-api/openapi-ts": "^0.86.11",
     "@next/bundle-analyzer": "^16.0.1",
     "@peculiar/webcrypto": "^1.5.0",
