--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "lint:fix": "eslint --fix .",
     "lint:tests": "eslint tests --max-warnings=0",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "generate:api": "./scripts/generate-api-client.sh",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -76,9 +76,11 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "^10.1.8",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lighthouse": "^12.8.2",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "whatwg-fetch": "^3.6.20"
