--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "validate": "npm run lint && npm run format:check && npm run type-check",
     "generate:api": "./scripts/generate-api-client.sh",
     "test": "jest",
     "test:watch": "jest --watch",
