--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,10 +41,8 @@ pytest-xdist>=3.8.0
 requests>=2.32.0
 
 # Development tools
-black>=24.3.0
-isort>=5.13.2
-flake8>=7.0.0
-mypy>=1.8.0
+ruff>=0.8.0  # All-in-one: linting, formatting, import sorting (replaces Black, Flake8, isort)
+mypy>=1.8.0  # Type checking
 
 # Security and authentication (pinned for reproducibility)
 python-jose==3.4.0
