--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.552.0",
     "next": "^15.5.6",
+    "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
