--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.552.0",
-    "next": "^15.5.6",
+    "next": "^16",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -77,14 +77,18 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0",
+    "eslint-config-next": "^16",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lighthouse": "^12.8.2",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "typescript-eslint": "^8.15.0",
     "whatwg-fetch": "^3.6.20"
   }
 }
