--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,10 +85,16 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lighthouse": "^12.8.2",
+    "msw": "^2.12.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.15.0",
     "whatwg-fetch": "^3.6.20"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
