--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -41,3 +41,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Auto-generated files (regenerate with npm run generate:api)
+/src/mocks/handlers/generated.ts
