--- a/frontend/package.json
+++ b/frontend/package.json
@@ -88,6 +88,7 @@
     "msw": "^2.12.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5",
     "typescript-eslint": "^8.15.0",
     "whatwg-fetch": "^3.6.20"
