--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -54,6 +54,9 @@ dependencies = [
     "passlib==1.7.4",
     "bcrypt==4.2.1",
     "cryptography==44.0.1",
+
+    # OAuth authentication
+    "authlib>=1.3.0",
 ]
 
 # Development dependencies
@@ -241,6 +244,10 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "starlette.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "authlib.*"
 ignore_missing_imports = true
 
 # SQLAlchemy ORM models - Column descriptors cause type confusion
