Upgrade dependencies in `package-lock.json`
- Upgraded various dependencies across `@esbuild`, `@eslint`, `@hey-api`, and `@img` packages to their latest versions.
- Removed unused `json5` dependency under `@babel/core`.
- Ensured integrity hashes are updated to reflect changes.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,5 +97,9 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "overrides": {
+    "glob": "^10.4.1",
+    "inflight": "npm:lru-cache@^10.0.0"
   }
 }
